decompiler/tests/snapshots/test_tool__x86_64_callconv__func082.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
func082 0x4012a7+7 (file 0x12a7)
          4012a7: f2 0f 10 44 24 10       movsd xmm0,[rsp+10h]
          4012ad: c3                      ret

function type: "func082" func (arg0 *void <TypeID(1v1)>,
                               arg1 *void <TypeID(1v1)>,
                               arg2 small <TypeID(785v1)>,
                               arg3 big <TypeID(795v1)>) double <TypeID(784v1)>
WARNING: 1 errors; only 3 out of 4 parameters could be mapped to registers and stack slots
  #0: type has no alignment?
0 warnings.


mil program = 
program  64 instrs
    0 r12: TypeID(2v1) <- Ancestral(AncestralName("stack_bottom"))
    1 r2: TypeID(2v1) <- Ancestral(AncestralName("CF"))
    2 r3: TypeID(2v1) <- Ancestral(AncestralName("PF"))
    3 r4: TypeID(2v1) <- Ancestral(AncestralName("AF"))
    4 r5: TypeID(2v1) <- Ancestral(AncestralName("ZF"))
    5 r6: TypeID(2v1) <- Ancestral(AncestralName("SF"))
    6 r7: TypeID(2v1) <- Ancestral(AncestralName("TF"))
    7 r8: TypeID(2v1) <- Ancestral(AncestralName("IF"))
    8 r9: TypeID(2v1) <- Ancestral(AncestralName("DF"))
    9 r10: TypeID(2v1) <- Ancestral(AncestralName("OF"))
   10 r11: TypeID(2v1) <- Ancestral(AncestralName("RBP"))
   11 r12: TypeID(2v1) <- Ancestral(AncestralName("RSP"))
   12 r13: TypeID(2v1) <- Ancestral(AncestralName("RIP"))
   13 r14: TypeID(2v1) <- Ancestral(AncestralName("RDI"))
   14 r15: TypeID(2v1) <- Ancestral(AncestralName("RSI"))
   15 r16: TypeID(2v1) <- Ancestral(AncestralName("RAX"))
   16 r17: TypeID(2v1) <- Ancestral(AncestralName("RBX"))
   17 r18: TypeID(2v1) <- Ancestral(AncestralName("RCX"))
   18 r19: TypeID(2v1) <- Ancestral(AncestralName("RDX"))
   19 r20: TypeID(2v1) <- Ancestral(AncestralName("R8"))
   20 r21: TypeID(2v1) <- Ancestral(AncestralName("R9"))
   21 r22: TypeID(2v1) <- Ancestral(AncestralName("R10"))
   22 r23: TypeID(2v1) <- Ancestral(AncestralName("R11"))
   23 r24: TypeID(2v1) <- Ancestral(AncestralName("R12"))
   24 r25: TypeID(2v1) <- Ancestral(AncestralName("R13"))
   25 r26: TypeID(2v1) <- Ancestral(AncestralName("R14"))
   26 r27: TypeID(2v1) <- Ancestral(AncestralName("R15"))
   27 r28: TypeID(2v1) <- Ancestral(AncestralName("ZMM0"))
   28 r29: TypeID(2v1) <- Ancestral(AncestralName("ZMM1"))
   29 r30: TypeID(2v1) <- Ancestral(AncestralName("ZMM2"))
   30 r31: TypeID(2v1) <- Ancestral(AncestralName("ZMM3"))
   31 r32: TypeID(2v1) <- Ancestral(AncestralName("ZMM4"))
   32 r33: TypeID(2v1) <- Ancestral(AncestralName("ZMM5"))
   33 r34: TypeID(2v1) <- Ancestral(AncestralName("ZMM6"))
   34 r35: TypeID(2v1) <- Ancestral(AncestralName("ZMM7"))
   35 r36: TypeID(2v1) <- Ancestral(AncestralName("ZMM8"))
   36 r37: TypeID(2v1) <- Ancestral(AncestralName("ZMM9"))
   37 r38: TypeID(2v1) <- Ancestral(AncestralName("ZMM10"))
   38 r39: TypeID(2v1) <- Ancestral(AncestralName("ZMM11"))
   39 r40: TypeID(2v1) <- Ancestral(AncestralName("ZMM12"))
   40 r41: TypeID(2v1) <- Ancestral(AncestralName("ZMM13"))
   41 r42: TypeID(2v1) <- Ancestral(AncestralName("ZMM14"))
   42 r43: TypeID(2v1) <- Ancestral(AncestralName("ZMM15"))
   43 r45: TypeID(2v1) <- Ancestral(AncestralName("arg0"))
   44 r15: TypeID(2v1) <- Get(r45)
   45 r46: TypeID(2v1) <- Ancestral(AncestralName("arg1"))
   46 r19: TypeID(2v1) <- Get(r46)
   47 r47: TypeID(2v1) <- Ancestral(AncestralName("arg2"))
   48 r48: TypeID(2v1) <- Part { src: r47, offset: 0, size: 8 }
   49 r18: TypeID(2v1) <- Get(r48)
   50 r49: TypeID(2v1) <- Part { src: r47, offset: 8, size: 8 }
   51 r20: TypeID(2v1) <- Get(r49)
0x4012a7:
   52 r46: TypeID(2v1) <- Const { value: 16, size: 8 }
   53 r46: TypeID(2v1) <- Arith(Add, r46, r12)
   54 r45: TypeID(2v1) <- LoadMem { addr: r46, size: 8 }
   55 r45: TypeID(2v1) <- Widen { reg: r45, target_size: 16, sign: false }
   56 r47: TypeID(2v1) <- Part { src: r28, offset: 8, size: 56 }
   57 r28: TypeID(2v1) <- Concat { lo: r45, hi: r47 }
0x4012ad:
   58 r45: TypeID(2v1) <- Void
   59 r46: TypeID(2v1) <- Part { src: r28, offset: 0, size: 8 }
   60 r45: TypeID(2v1) <- Concat { lo: r45, hi: r46 }
   61 r45: TypeID(2v1) <- Part { src: r45, offset: 0, size: 8 }
   62 r47: TypeID(2v1) <- SetReturnValue(r45)
   63 r47: TypeID(2v1) <- Control(Ret)


ssa pre-xform:
ssa program  64 instrs
.B0:    ;;  → Always(Return).
         r11: ? <- Ancestral(AncestralName("RSP"))
         r27: ? <- Ancestral(AncestralName("ZMM0"))
         r52: ? <- Const { value: 16, size: 8 }
         r53: ? <- Arith(Add, r52, r11)
         r54: ? <- LoadMem { addr: r53, size: 8 }
         r55: ? <- Widen { reg: r54, target_size: 16, sign: false }
         r56: ? <- Part { src: r27, offset: 8, size: 56 }
         r57: ? <- Concat { lo: r55, hi: r56 }
         r59: ? <- Part { src: r57, offset: 0, size: 8 }
         r60: ? <- Concat { lo: r58, hi: r59 }
         r61: ? <- Part { src: r60, offset: 0, size: 8 }
         r62: ? <- SetReturnValue(r61)


cfg:
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r11, r27, r52, r53, r54, r55, r56, r57, r58, r59, r60, r61, r62]
  domtree:
    BlockID(0)

ssa post-xform:
ssa program  64 instrs
.B0:    ;;  → Always(Return).
         r11: ? <- Ancestral(AncestralName("RSP"))
         r53: ? <- ArithK(Add, r11, 16)
         r54: ? <- LoadMem { addr: r53, size: 8 }
         r62: ? <- SetReturnValue(r54)



T0: {
  ;
  return [pre:RSP + 16]:8
}
